--- a/html/prijava.html
+++ b/html/prijava.html
@@ -90,6 +90,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/auth.js"></script>
+<script src="../js/login.js"></script>
 
 </body>
 </html>
